--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,24 @@
+.contenu-restapi {
+    margin-top: 20px;
+}
 
+.carte-restapi {
+    border: 1px solid #ddd;
+    padding: 15px;
+    margin-bottom: 10px;
+    background-color: #f9f9f9;
+}
+
+.carte-restapi img.thumbnail {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.carte-restapi h2 {
+    margin-top: 0;
+}
+
+.carte-restapi p {
+    margin: 0;
+}
